--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="color2">#028f0e</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorinicio">#47c80000</color>
+    <color name="colorinicio">#f1022dec</color>
     <color name="colorregistro">#32000096</color>
     <color name="negro">#000000</color>
+    <color name="blanco">#ffffff</color>
 </resources>
