--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -3,26 +3,14 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
 
 
-
-
-
-
     android:background="@drawable/registro2">
 
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        ></include>
 
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:src="@drawable/bulldog"
-        android:visibility="visible"
-        android:foregroundGravity="top"
-        android:layout_above="@+id/imageView4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
 
     <EditText
         android:layout_width="176dp"
@@ -30,10 +18,10 @@
         android:id="@+id/iniciosesion1"
         android:hint="@string/usuario"
         android:singleLine="true"
-        android:layout_marginBottom="132dp"
         android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/iniciosesion2"
+        android:layout_alignStart="@+id/iniciosesion2" />
 
     <EditText
         android:layout_width="176dp"
@@ -43,9 +31,8 @@
         android:id="@+id/iniciosesion2"
         android:hint="@string/contraseña"
         android:singleLine="true"
-        android:layout_marginTop="59dp"
         android:gravity="center"
-        android:layout_below="@+id/imageView4"
+        android:layout_below="@+id/iniciosesion1"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -53,17 +40,24 @@
         android:layout_height="wrap_content"
         android:text="Iniciar Sesión"
         android:id="@+id/iniciosesion3"
-        android:background="@color/colorregistro"
+        android:textColor="@color/blanco"
+        android:backgroundTint="@color/colorinicio"
         android:layout_below="@+id/iniciosesion2"
         android:layout_centerHorizontal="true" />
+
+
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView4"
         android:background="@drawable/perritotaza"
+        android:layout_below="@+id/toolbar"
         android:layout_above="@+id/iniciosesion1"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignRight="@+id/iniciosesion1"
+        android:layout_alignEnd="@+id/iniciosesion1"
+        android:layout_alignLeft="@+id/iniciosesion1"
+        android:layout_alignStart="@+id/iniciosesion1" />
 
 
 </RelativeLayout>
