probando la rama de desarrollo, se supone que este commit solo deberia estar en la rama de desarrollo.

--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -38,7 +38,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Iniciar Sesión"
+        android:text="@string/tituloiniciarsesion"
         android:id="@+id/iniciosesion3"
         android:textColor="@color/blanco"
         android:backgroundTint="@color/colorinicio"
