--- a/app/src/main/res/layout/implicit_layout.xml
+++ b/app/src/main/res/layout/implicit_layout.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-
-
-
     android:gravity="top|center_vertical"
     android:weightSum="1"
     android:background="@drawable/inicio2">
 
-<include
-    android:id="@+id/toolbar"
-    layout="@layout/toolbar"
-    ></include>
+
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        ></include>
 
 
     <TextView
@@ -20,11 +21,11 @@
         android:layout_height="wrap_content"
         android:text="@string/datos"
         android:textColor="@color/negro"
-        android:textStyle="bold"
+        android:textStyle="italic"
         android:textSize="15sp"
         android:id="@+id/datos"
         android:layout_weight="0.14"
-        android:gravity="top|center_vertical" />
+        android:gravity="center" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -33,12 +34,16 @@
         android:layout_gravity="center_horizontal"
         android:background="@drawable/perritocorazon" />
 
+
+
     <EditText
         android:layout_width="276dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
         android:hint="@string/nombre"
+        android:maxLength="15"
+        android:singleLine="true"
         android:id="@+id/nombre"
         android:gravity="left|center" />
 
@@ -49,6 +54,8 @@
         android:hint="@string/apellido"
         android:ems="10"
         android:id="@+id/apellido"
+        android:maxLength="15"
+        android:singleLine="true"
         android:gravity="left|center" />
 
     <EditText
@@ -78,10 +85,13 @@
         android:layout_width="276dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:maxLength="15"
+        android:maxLength="13"
+        android:singleLine="true"
         android:id="@+id/usuario"
         android:hint="@string/usuario"
         android:gravity="left|center" />
+
+
 
     <EditText
         android:layout_width="276dp"
@@ -103,13 +113,18 @@
         android:hint="@string/confirmar"
         android:id="@+id/confirmar" />
 
+
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:text="@string/guardardato"
-        android:background="@color/colorregistro"
+        android:textColor="@color/blanco"
+        android:backgroundTint="@color/colorinicio"
         android:id="@+id/guardar"
-        android:gravity="center" />
+        android:gravity="center"
+        android:layout_gravity="center_horizontal" />
+
 
 </LinearLayout>
