--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -11,53 +11,70 @@
         layout="@layout/toolbar"
         ></include>
 
-
-    <EditText
-        android:layout_width="176dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/iniciosesion1"
-        android:hint="@string/usuario"
-        android:singleLine="true"
-        android:gravity="center"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/iniciosesion2"
-        android:layout_alignStart="@+id/iniciosesion2" />
-
-    <EditText
-        android:layout_width="176dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/iniciosesion2"
-        android:hint="@string/contraseña"
-        android:singleLine="true"
-        android:gravity="center"
-        android:layout_below="@+id/iniciosesion1"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/tituloiniciarsesion"
-        android:id="@+id/iniciosesion3"
-        android:textColor="@color/blanco"
-        android:backgroundTint="@color/colorinicio"
-        android:layout_below="@+id/iniciosesion2"
-        android:layout_centerHorizontal="true" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar">
 
 
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView4"
-        android:background="@drawable/perritotaza"
-        android:layout_below="@+id/toolbar"
-        android:layout_above="@+id/iniciosesion1"
-        android:layout_alignRight="@+id/iniciosesion1"
-        android:layout_alignEnd="@+id/iniciosesion1"
-        android:layout_alignLeft="@+id/iniciosesion1"
-        android:layout_alignStart="@+id/iniciosesion1" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_below="@+id/toolbar"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView4"
+                android:background="@drawable/perritotaza"
+                android:layout_gravity="center_horizontal"
+                android:layout_above="@+id/iniciosesion1"
+                android:layout_centerHorizontal="true" />
+
+            <EditText
+                android:layout_width="176dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/iniciosesion1"
+                android:hint="@string/usuario"
+                android:singleLine="true"
+                android:gravity="center"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal" />
+
+            <EditText
+                android:layout_width="176dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/iniciosesion2"
+                android:hint="@string/contraseña"
+                android:singleLine="true"
+                android:gravity="center"
+                android:layout_below="@+id/iniciosesion1"
+                android:layout_alignLeft="@+id/iniciosesion1"
+                android:layout_alignStart="@+id/iniciosesion1"
+                android:layout_gravity="center_horizontal" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tituloiniciarsesion"
+                android:id="@+id/iniciosesion3"
+                android:textColor="@color/blanco"
+                android:backgroundTint="@color/colorinicio"
+                android:layout_below="@+id/iniciosesion2"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal" />
+        </LinearLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
