Se le puso limite de caracteres al usuario y contraseña en la vista "iniciar sesion"

--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -43,6 +43,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/iniciosesion1"
                 android:hint="@string/usuario"
+                android:maxLength="13"
                 android:singleLine="true"
                 android:gravity="center"
                 android:layout_centerVertical="true"
@@ -54,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
+                android:maxLength="10"
                 android:id="@+id/iniciosesion2"
                 android:hint="@string/contraseña"
                 android:singleLine="true"
