Se realizo la vista del modulo admusuario.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorregistro">#32000096</color>
     <color name="negro">#000000</color>
     <color name="blanco">#ffffff</color>
+    <color name="rosado">#cfc1bf</color>
 </resources>
