--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -26,17 +26,20 @@
             android:orientation="vertical"
             android:layout_below="@+id/toolbar"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:weightSum="1">
 
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:id="@+id/imageView4"
                 android:background="@drawable/perritotaza"
                 android:layout_gravity="center_horizontal"
                 android:layout_above="@+id/iniciosesion1"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:paddingLeft="50dp" />
 
             <EditText
                 android:layout_width="176dp"
@@ -48,7 +51,8 @@
                 android:gravity="center"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp" />
 
             <EditText
                 android:layout_width="176dp"
@@ -63,7 +67,8 @@
                 android:layout_below="@+id/iniciosesion1"
                 android:layout_alignLeft="@+id/iniciosesion1"
                 android:layout_alignStart="@+id/iniciosesion1"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="9dp" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -74,7 +79,8 @@
                 android:backgroundTint="@color/colorinicio"
                 android:layout_below="@+id/iniciosesion2"
                 android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp" />
         </LinearLayout>
     </ScrollView>
 
