--- a/app/src/main/res/layout/admusuario.xml
+++ b/app/src/main/res/layout/admusuario.xml
@@ -27,10 +27,11 @@
         android:text="@string/textView15"
         android:id="@+id/textView15"
         android:textStyle="italic"
+        android:textColor="@color/blanco"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="240dp"
+        android:layout_marginBottom="238dp"
         android:textSize="18dp"
         android:gravity="center" />
 
