--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="negro">#000000</color>
     <color name="blanco">#ffffff</color>
     <color name="rosado">#cfc1bf</color>
+    <color name="verdeclaro">#d3dfba</color>
 </resources>
