Se realiza vista integracion y cariño

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blanco">#ffffff</color>
     <color name="rosado">#cfc1bf</color>
     <color name="verdeclaro">#d3dfba</color>
+    <color name="marinoclaro">#5c6dcf</color>
 </resources>
