--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -10,8 +10,8 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"
-        ></include>
+        layout="@layout/toolbar">
+    </include>
 
 
 
