--- a/app/src/main/res/layout/admmascota.xml
+++ b/app/src/main/res/layout/admmascota.xml
@@ -7,8 +7,8 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"
-        ></include>
+        layout="@layout/toolbar">
+    </include>
 
     <ImageView
         android:layout_width="match_parent"
