Tenemos listo la vista de ayuda y consejos del modulo integracion y cariño, ahora solo falta incluir la informacion en la vista "aprendamos de ellos", "collar de identificacion" y "ayuda y consejos".

--- a/app/src/main/res/layout/interaccion_layout.xml
+++ b/app/src/main/res/layout/interaccion_layout.xml
@@ -31,31 +31,34 @@
 
 
         <RadioButton
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/jugar"
             android:id="@+id/radioButton3"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:textSize="20dp" />
 
         <RadioButton
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/acariciar"
             android:id="@+id/radioButton4"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:textSize="20dp" />
 
         <RadioButton
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/Conversar"
             android:id="@+id/radioButton5"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:textSize="20dp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
