--- a/app/src/main/res/layout/collar.xml
+++ b/app/src/main/res/layout/collar.xml
@@ -21,8 +21,7 @@
         android:textSize="18dp"
         android:layout_below="@+id/imageView17"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -30,33 +29,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/collar_pregunta"
         android:id="@+id/textView19"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="131dp"
-        android:gravity="center" />
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/si"
-        android:id="@+id/radioButton"
-        android:layout_marginBottom="49dp"
-        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:layout_below="@+id/textView18"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="79dp"
-        android:layout_marginStart="79dp" />
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/no"
-        android:id="@+id/radioButton2"
-        android:layout_alignTop="@+id/radioButton"
-        android:layout_toRightOf="@+id/radioButton"
-        android:layout_toEndOf="@+id/radioButton"
-        android:layout_marginLeft="100dp"
-        android:layout_marginStart="100dp" />
+        android:layout_alignParentStart="true" />
 
     <ImageView
         android:layout_width="200dp"
@@ -65,5 +41,50 @@
         android:layout_below="@+id/toolbar"
         android:layout_centerHorizontal="true"
         android:src="@drawable/collarv3" />
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView19"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/radiogroupcollar">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/si"
+            android:id="@+id/radioButton"
+            android:layout_gravity="center_horizontal" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no"
+            android:id="@+id/radioButton2"
+            android:layout_gravity="center_horizontal" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal">
+
+            <ScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/scrollView3" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+
+                    android:id="@+id/textView22"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true" />
+            </ScrollView>
+        </RelativeLayout>
+
+    </RadioGroup>
 
 </RelativeLayout>
