--- a/app/src/main/res/layout/interaccion_layout.xml
+++ b/app/src/main/res/layout/interaccion_layout.xml
@@ -88,8 +88,9 @@
                         android:layout_alignParentTop="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
-                        android:layout_marginTop="40dp"
-                        android:textSize="18sp" />
+                        android:layout_marginTop="20dp"
+                        android:textSize="18sp"
+                        android:gravity="center" />
                 </LinearLayout>
             </ScrollView>
 
